--- a/hangzhou_buy_house/package.json
+++ b/hangzhou_buy_house/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "element-ui": "^2.4.11",
+    "element-ui": "^2.5.2",
     "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "markdown": "^0.5.0",
+    "markdown-into-html": "^1.0.1",
+    "markdown-to-html": "^0.0.13",
+    "marked": "^0.6.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
